cards btn effect

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -102,9 +102,9 @@
                 <p class="card-text"><span>Custom CSS</span> 'aesthetics' and 'typewriter' text was added, see <a
                         href="../pages/blog.html#blog5Button">blog[5]</a>.
                     <div class="btnContainer">
-                        <a href="https://codetracklift.github.io/eyemovement/" class="btn btn-secondary"
+                        <a id='animatedHeadDemo' onclick="buttonEffect('animatedHeadDemo')" href="https://codetracklift.github.io/eyemovement/" class="btn btn-secondary"
                             target="_blank">Try Demo</a>
-                        <a href="https://github.com/codeTrackLift/eyemovement" class="btn btn-secondary btnRepo "
+                        <a id='animatedHeadRepo' onclick="buttonEffect('animatedHeadRepo')" href="https://github.com/codeTrackLift/eyemovement" class="btn btn-secondary btnRepo "
                             target="'_blank">View Repo</a>
                     </div>
             </div>
@@ -120,9 +120,9 @@
                 <p class="card-text"><span>Custom features</span> include an 'Aqua' theme and <em>ZAP!</em> PacMan
                     button, see <a href="../pages/blog.html#blog5Button">blog[5]</a>.
                     <div class="btnContainer">
-                        <a href="https://codetracklift.github.io/pacmen_factory/" class="btn btn-secondary"
+                        <a id='pacManFactoryDemo' onclick="buttonEffect('pacManFactoryDemo')" href="https://codetracklift.github.io/pacmen_factory/" class="btn btn-secondary"
                             target="_blank">Try Demo</a>
-                        <a href="https://github.com/codeTrackLift/pacmen_factory" class="btn btn-secondary btnRepo "
+                        <a id='pacManFactoryRepo' onclick="buttonEffect('pacManFactoryRepo')" href="https://github.com/codeTrackLift/pacmen_factory" class="btn btn-secondary btnRepo "
                             target="'_blank">View Repo</a>
                     </div>
             </div>
@@ -138,9 +138,9 @@
                 <p class="card-text">This is <span>fully responsive</span> and accepts keyboard, mouse, and mobile
                     screen inputs! See <a href='../pages/blog.html#blog3Button'>blog[3]</a>.</p>
                 <div class="btnContainer">
-                    <a href="https://codetracklift.github.io/pacman/" class="btn btn-secondary" target="_blank">Play
+                    <a id='pacManMiniGameDemo' onclick="buttonEffect('pacManMiniGameDemo')"href="https://codetracklift.github.io/pacman/" class="btn btn-secondary" target="_blank">Play
                         Game</a>
-                    <a href="https://github.com/codeTrackLift/pacman" class="btn btn-secondary btnRepo "
+                    <a id='pacManMiniGameRepo' onclick="buttonEffect('pacManMiniGameRepo')" href="https://github.com/codeTrackLift/pacman" class="btn btn-secondary btnRepo "
                         target="'_blank">View Repo</a>
                 </div>
             </div>
@@ -158,8 +158,8 @@
                         target="_blank">ScrollMagic</a>.</p>
                 <p class="card-text">Need a photography session in the Philadelphia / King of Prussia area?</p>
                 <div class="btnContainer">
-                    <a href="https://www.lmnophoto.biz/" class="btn btn-secondary" target="_blank">Visit Site</a>
-                    <a href="https://github.com/codeTrackLift/lmnophoto" class="btn btn-secondary btnRepo"
+                    <a id='lmnoPhotoDemo' onclick="buttonEffect('lmnoPhotoDemo')" href="https://www.lmnophoto.biz/" class="btn btn-secondary" target="_blank">Visit Site</a>
+                    <a id='lmnoPhotoRepo' onclick="buttonEffect('lmnoPhotoRepo')" href="https://github.com/codeTrackLift/lmnophoto" class="btn btn-secondary btnRepo"
                         target="'_blank">View Repo</a>
                 </div>
             </div>
@@ -174,9 +174,9 @@
                 </p>
                 <p class="card-text">Accepts mouse and key inputs, and makes drum sound effects!</p>
                 <div class="btnContainer">
-                    <a href="https://codetracklift.github.io/odin-calc/" class="btn btn-secondary" target="_blank">Try
+                    <a id='jsCalcDemo' onclick="buttonEffect('jsCalcDemo')" href="https://codetracklift.github.io/odin-calc/" class="btn btn-secondary" target="_blank">Try
                         Demo</a>
-                    <a href="https://github.com/codeTrackLift/odin-calc" class="btn btn-secondary btnRepo"
+                    <a id='jsCalcRepo' onclick="buttonEffect('jsCalcRepo')" href="https://github.com/codeTrackLift/odin-calc" class="btn btn-secondary btnRepo"
                         target="'_blank">View Repo</a>
                 </div>
             </div>
@@ -191,9 +191,9 @@
                 </p>
                 <p class="card-text">Accepts mouse and key inputs, and the pixel resolution can be resized!</p>
                 <div class="btnContainer">
-                    <a href="https://codetracklift.github.io/etch-a-sketch/" class="btn btn-secondary"
+                    <a id='etchASketchDemo' onclick="buttonEffect('etchASketchDemo')" href="https://codetracklift.github.io/etch-a-sketch/" class="btn btn-secondary"
                         target="_blank">Try Demo</a>
-                    <a href="https://github.com/codeTrackLift/etch-a-sketch" class="btn btn-secondary btnRepo"
+                    <a id='etchASketchRepo' onclick="buttonEffect('etchASketchRepo')" href="https://github.com/codeTrackLift/etch-a-sketch" class="btn btn-secondary btnRepo"
                         target="'_blank">View Repo</a>
                 </div>
             </div>
@@ -209,9 +209,9 @@
                 </p>
                 <p class="card-text">Accepts text and mouse inputs with text validation and results tracking!</p>
                 <div class="btnContainer">
-                    <a href="https://codetracklift.github.io/rock-paper-scissors/" class="btn btn-secondary"
+                    <a id='rockPaperScissorshDemo' onclick="buttonEffect('rockPaperScissorshDemo')" href="https://codetracklift.github.io/rock-paper-scissors/" class="btn btn-secondary"
                         target="'_blank">Play Game</a>
-                    <a href="https://github.com/codeTrackLift/rock-paper-scissors" class="btn btn-secondary btnRepo"
+                    <a id='rockPaperScissorshRepo' onclick="buttonEffect('rockPaperScissorshRepo')" href="https://github.com/codeTrackLift/rock-paper-scissors" class="btn btn-secondary btnRepo"
                         target="'_blank">View Repo</a>
                 </div>
             </div>
@@ -230,9 +230,9 @@
                         Design</a> course at <a href="https://www.freecodecamp.org/"
                         target="_blank">freeCodeCamp.org</a>.</p>
                 <div class="btnContainer">
-                    <a href="https://codetracklift.github.io/odin-landingpage/" class="btn btn-secondary"
+                    <a id='odinLandingpageDemo' onclick="buttonEffect('odinLandingpageDemo')" href="https://codetracklift.github.io/odin-landingpage/" class="btn btn-secondary"
                         target="'_blank">Visit Site</a>
-                    <a href="https://github.com/codeTrackLift/odin-landingpage" class="btn btn-secondary btnRepo"
+                    <a id='odinLandingpageRepo' onclick="buttonEffect('odinLandingpageRepo')" href="https://github.com/codeTrackLift/odin-landingpage" class="btn btn-secondary btnRepo"
                         target="'_blank">View Repo</a>
                 </div>
             </div>
@@ -247,9 +247,8 @@
 
     <!-- My JS -->
     <script src="../js/footer.js"></script>
-    <script>
-        injectMyFooter()
-    </script>
+    <script>injectMyFooter()</script>
+    <script src="../js/cards.js"></script>
 </body>
 
 </html>
