--- a/pages/contact.html
+++ b/pages/contact.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="../css/typeWritercTL.css">
+    <link rel="stylesheet" href="../css/cards.css">
     <link rel="stylesheet" href="../css/contact.css">
     <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
 
@@ -136,7 +137,7 @@
                 <input type="hidden" name="_subject" value="New codeByPete Inquiry!">
                 <input type="hidden" name="_template" value="basic">
                 <div class="text-center">
-                    <button id='emailButton' class='btn btn-secondary text-center'>Send Message</button>
+                    <button id='emailButton' onclick="buttonEffect('emailButton')" class='btn btn-secondary text-center'>Send Message</button>
                 </div>
             </form>
         </div>
@@ -154,6 +155,7 @@
     <!-- My JS -->
     <script src="../js/footer.js"></script>
     <script>injectMyFooter()</script>
+    <script src="../js/cards.js"></script>
 </body>
 
 </html>
