--- a/pages/resume.html
+++ b/pages/resume.html
@@ -168,6 +168,7 @@
             <li>Testing of all features, site hosting, maintenance, and updates.</li>
             <li>Continuous Integration / Continuous Deployment (CI/CD).</li>
             <li>Search Engine Optimization (SEO) and Google Lighthouse.</li>
+            <li>Test Driven Development (TDD), as applicable.</li>
         </ul>
     </div>
 
