navbar js mobile test

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -31,7 +31,8 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-sm navbar-dark bg-transparent sticky-top">
+    <nav id='navbar' class="navbar navbar-expand-sm navbar-dark bg-transparent sticky-top"></nav>
+    <!-- <nav class="navbar navbar-expand-sm navbar-dark bg-transparent sticky-top">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
                 aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,13 +48,13 @@
                         <a class="nav-link" aria-current="page" href="../pages/welcome.html">Welcome</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="../pages/about.html">About</a>
+                        <a class="nav-link active" aria-current="page" href="../pages/about.html">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../pages/blog.html">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="../pages/projects.html">Projects</a>
+                        <a class="nav-link" href="../pages/projects.html">Projects</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../pages/resume.html">Resume</a>
@@ -62,13 +63,9 @@
                         <a class="nav-link" href="../pages/contact.html">Contact</a>
                     </li>
                 </ul>
-                <!-- <form class="d-flex">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
-              </form> -->
             </div>
         </div>
-    </nav>
+    </nav> -->
 
     <section id="typeWriterSection">
         <figure id='typeWriter' class="mx-auto">
@@ -246,9 +243,11 @@
     <script src="../libraries/bootstrap.min.js"></script>
 
     <!-- My JS -->
+    <script src="../js/navbar.js"></script>
+    <script>injectMyNavbar();setActiveNavlink('navlinkProjects');</script>
+    <script src="../js/cards.js"></script>
     <script src="../js/footer.js"></script>
     <script>injectMyFooter()</script>
-    <script src="../js/cards.js"></script>
 </body>
 
 </html>
