--- a/pages/about.html
+++ b/pages/about.html
@@ -30,7 +30,8 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-sm navbar-dark bg-transparent sticky-top">
+    <nav id='navbar' class="navbar navbar-expand-sm navbar-dark bg-transparent sticky-top"></nav>
+    <!-- <nav class="navbar navbar-expand-sm navbar-dark bg-transparent sticky-top">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
                 aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -61,13 +62,9 @@
                         <a class="nav-link" href="../pages/contact.html">Contact</a>
                     </li>
                 </ul>
-                <!-- <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form> -->
             </div>
         </div>
-    </nav>
+    </nav> -->
 
     <section id="typeWriterSection">
         <figure id='typeWriter' class="mx-auto">
@@ -125,6 +122,8 @@
     <script src="../libraries/bootstrap.min.js"></script>
 
     <!-- My JS -->
+    <script src="../js/navbar.js"></script>
+    <script>injectMyNavbar();setActiveNavlink('navlinkAbout');</script>
     <script src="../js/footer.js"></script>
     <script>injectMyFooter()</script>
 </body>
