--- a/pages/blog.html
+++ b/pages/blog.html
@@ -29,7 +29,8 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-sm navbar-dark bg-transparent sticky-top">
+    <nav id='navbar' class="navbar navbar-expand-sm navbar-dark bg-transparent sticky-top"></nav>
+    <!-- <nav class="navbar navbar-expand-sm navbar-dark bg-transparent sticky-top">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
                 aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,10 +46,10 @@
                         <a class="nav-link" aria-current="page" href="../pages/welcome.html">Welcome</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="../pages/about.html">About</a>
+                        <a class="nav-link active" aria-current="page" href="../pages/about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="../pages/blog.html">Blog</a>
+                        <a class="nav-link" href="../pages/blog.html">Blog</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../pages/projects.html">Projects</a>
@@ -60,13 +61,9 @@
                         <a class="nav-link" href="../pages/contact.html">Contact</a>
                     </li>
                 </ul>
-                <!-- <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form> -->
             </div>
         </div>
-    </nav>
+    </nav> -->
 
     <section id="typeWriterSection" class="">
         <figure id='typeWriter' class="mx-auto">
@@ -814,6 +811,8 @@
     <script src="../libraries/bootstrap.min.js"></script>
     
     <!-- My JS -->
+    <script src="../js/navbar.js"></script>
+    <script>injectMyNavbar();setActiveNavlink('navlinkBlog');</script>
     <script src='../js/blog.js'></script>
     <script src="../js/footer.js"></script>
     <script>injectMyFooter()</script>
