--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -31,20 +31,24 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-sm navbar-dark bg-transparent sticky-top">
+    <nav id='navbar' class="navbar navbar-expand-sm navbar-dark bg-transparent sticky-top"></nav>
+    <!-- <nav class="navbar navbar-expand-sm navbar-dark bg-transparent sticky-top">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
                 aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <img src='../pics/pharma2code_icon.gif' style="width:2.5rem;">
             </button>
-            <!-- <h3 class="d-block d-sm-none" style="font-style:italic;letter-spacing:2vw;"><span style="color:white;">code</span><span style="color:#00857c;">By</span><span style="color:lime;">Pete</span></h3> -->
+            <h3 class="d-block d-sm-none" style="font-style:italic;letter-spacing:2vw;"><span
+                    style="color:white;">code</span><span style="color:#00857c;">By</span><span
+                    style="color:lime;">Pete</span>
+            </h3>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../pages/welcome.html">Welcome</a>
+                        <a class="nav-link" aria-current="page" href="../pages/welcome.html">Welcome</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="../pages/about.html">About</a>
+                        <a class="nav-link active" aria-current="page" href="../pages/about.html">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../pages/blog.html">Blog</a>
@@ -59,13 +63,9 @@
                         <a class="nav-link" href="../pages/contact.html">Contact</a>
                     </li>
                 </ul>
-                <!-- <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form> -->
             </div>
         </div>
-    </nav>
+    </nav> -->
 
     <div id='welcome' class='container-fluid animationBorder'>
         <figure class=''>
@@ -156,9 +156,11 @@
     <script src="../libraries/bootstrap.min.js"></script>
 
     <!-- My JS -->
+    <script src="../js/navbar.js"></script>
+    <script>injectMyNavbar();setActiveNavlink('navlinkWelcome');navbarCBPRemove();</script>
+    <script src="../js/cards.js"></script>
     <script src="../js/footer.js"></script>
     <script>setTimeout(injectMyFooter,3000)</script>
-    <script src="../js/cards.js"></script>
 </body>
 
 </html>
