mainContent welcome delayed inject

--- a/pages/about.html
+++ b/pages/about.html
@@ -32,55 +32,59 @@
 
     <nav id='navbar' class="navbar navbar-expand-sm navbar-dark bg-transparent sticky-top"></nav>
 
-    <section id="typeWriterSection">
-        <figure id='typeWriter' class="mx-auto">
-            <h2 id="typeWriter1"><span style='color:darkorchid;'>while</span> (<span style="color:cornflowerblue">alive</span>) {</h2>
-            <h2 id="typeWriter2"><span style='color:rgb(50,50,50);text-shadow:none;'>__</span><span style='color:chocolate'>code</span>()<span style='color:gray;'>;</span></h2>
-            <h2 id="typeWriter3"><span style='color:rgb(50,50,50);text-shadow:none;'>__</span><span style='color:chocolate'>track</span>(<span style='color:cornflowerblue;'>macros</span>)<span style='color:gray;'>;</span></h2>
-            <h2 id="typeWriter4"><span style='color:rgb(50,50,50);text-shadow:none;'>__</span><span style='color:chocolate'>lift</span>(<span style='color:cornflowerblue'>weights</span>)<span style='color:gray;'>;</span></h2>
-            <h2 id="typeWriter5">}</h2>
-        </figure>
-    </section>
+    <main id="mainContent">
 
-    <div id="greetingPic">
-        <img src="../pics/profilepic.jpg" class='img-fluid' alt="Pete's profile picture.">
-    </div>
+        <section id="typeWriterSection">
+            <figure id='typeWriter' class="mx-auto">
+                <h2 id="typeWriter1"><span style='color:darkorchid;'>while</span> (<span style="color:cornflowerblue">alive</span>) {</h2>
+                <h2 id="typeWriter2"><span style='color:rgb(50,50,50);text-shadow:none;'>__</span><span style='color:chocolate'>code</span>()<span style='color:gray;'>;</span></h2>
+                <h2 id="typeWriter3"><span style='color:rgb(50,50,50);text-shadow:none;'>__</span><span style='color:chocolate'>track</span>(<span style='color:cornflowerblue;'>macros</span>)<span style='color:gray;'>;</span></h2>
+                <h2 id="typeWriter4"><span style='color:rgb(50,50,50);text-shadow:none;'>__</span><span style='color:chocolate'>lift</span>(<span style='color:cornflowerblue'>weights</span>)<span style='color:gray;'>;</span></h2>
+                <h2 id="typeWriter5">}</h2>
+            </figure>
+        </section>
 
-    <div id="myIntro" class="myArticles container-fluid">
-        <h2>Hello,</h2>
-        <p>My name is <span class="menloRegular" style="color:chocolate">Pete</span> and I <span>grew up in the 90s</span>.  I fondly remember multi-sided die, Bulletin Board Systems, Sierra games, and AOL CDs.</p>
-        <p>'Medicine is my destiny,' or so I was told.  I have a <span>Bachelor's Degree</span> in <span>Biological Sciences</span>, and my <a href="../pages/resume.html" target="_blank" class="menloRegular">stationInLife</a> was in the <span>Pharmaceutical Engineering</span> space for two decades.</p>
-        <p>At the mid-point of my career, I enrolled in a <span>Full Stack Coding Bootcamp</span> to pursue my <span>childhood dream</span> of being a <span class="menloRegular" style="color:darkorchid">Software Developer</span>.</p>
-        <p>Please join me, on <a href="../pages/blog.html" target="_blank" class="menloRegular">myCodingJourney</a>.</p>
-        <div class="row">
-            <img id='crushItApple' class='col-sm-1 img-rect img-fluid' src="../pics/about/crushItApple.jpg" alt="Core Nutritionals sticker on a glowing Apple logo.">
-            <p class="col-sm-11 text-end">Best Regards,<br>Pete Chu</p>
+        <div id="greetingPic">
+            <img src="../pics/profilepic.jpg" class='img-fluid' alt="Pete's profile picture.">
         </div>
-    </div>
 
-    <div id="personal" class="myArticles container-fluid my-4">
-        <h1 class="text-center mb-4">Personal Stuff</h1>
-        <div class="row">
-            <div class="col-sm-4 text-center">
-                <a href="https://www.issaonline.com/" target="_blank"><img src="../pics/about/issa_logo.gif" class='img-fluid img-round my-auto' alt="International Sports Sciences Association Logo"></a>
+        <div id="myIntro" class="myArticles container-fluid">
+            <h2>Hello,</h2>
+            <p>My name is <span class="menloRegular" style="color:chocolate">Pete</span> and I <span>grew up in the 90s</span>.  I fondly remember multi-sided die, Bulletin Board Systems, Sierra games, and AOL CDs.</p>
+            <p>'Medicine is my destiny,' or so I was told.  I have a <span>Bachelor's Degree</span> in <span>Biological Sciences</span>, and my <a href="../pages/resume.html" target="_blank" class="menloRegular">stationInLife</a> was in the <span>Pharmaceutical Engineering</span> space for two decades.</p>
+            <p>At the mid-point of my career, I enrolled in a <span>Full Stack Coding Bootcamp</span> to pursue my <span>childhood dream</span> of being a <span class="menloRegular" style="color:darkorchid">Software Developer</span>.</p>
+            <p>Please join me, on <a href="../pages/blog.html" target="_blank" class="menloRegular">myCodingJourney</a>.</p>
+            <div class="row">
+                <img id='crushItApple' class='col-sm-1 img-rect img-fluid' src="../pics/about/crushItApple.jpg" alt="Core Nutritionals sticker on a glowing Apple logo.">
+                <p class="col-sm-11 text-end">Best Regards,<br>Pete Chu</p>
             </div>
-            <img src="../pics/about/peteSwitch.jpg" class='col-sm-4 img-fluid img-rect my-auto px-0' alt="Pete selfie with a shiba inu named Switch.">
-            <img src="../pics/about/peteLaFitness.jpg" class='col-sm-4 img-fluid img-rect bg-transparent px-0' alt="Pete gym selfie.">
         </div>
-        <div class='row'>
-            <p class="col-sm-4"><span style="color:darkorchid">Fitness & nutrition</span> are my other life passions. I am also a certified personal trainer.</p>
-            <p class="col-sm-7"><span style="color:chocolate">Dogs > cats</span>, but I like any animal that does not try to eat me. In my spare time, I pick up heavy things and put them back down. Some call it <span>'resistance training</span>.<span>'</span></p>
+
+        <div id="personal" class="myArticles container-fluid my-4">
+            <h1 class="text-center mb-4">Personal Stuff</h1>
+            <div class="row">
+                <div class="col-sm-4 text-center">
+                    <a href="https://www.issaonline.com/" target="_blank"><img src="../pics/about/issa_logo.gif" class='img-fluid img-round my-auto' alt="International Sports Sciences Association Logo"></a>
+                </div>
+                <img src="../pics/about/peteSwitch.jpg" class='col-sm-4 img-fluid img-rect my-auto px-0' alt="Pete selfie with a shiba inu named Switch.">
+                <img src="../pics/about/peteLaFitness.jpg" class='col-sm-4 img-fluid img-rect bg-transparent px-0' alt="Pete gym selfie.">
+            </div>
+            <div class='row'>
+                <p class="col-sm-4"><span style="color:darkorchid">Fitness & nutrition</span> are my other life passions. I am also a certified personal trainer.</p>
+                <p class="col-sm-7"><span style="color:chocolate">Dogs > cats</span>, but I like any animal that does not try to eat me. In my spare time, I pick up heavy things and put them back down. Some call it <span>'resistance training</span>.<span>'</span></p>
+            </div>
+            <div class="row">
+                <img src="../pics/about/peteSnowboardingMountain.jpg" class='img-square col-sm-4 img-fluid py-3 my-auto' alt="Picture of Pete snowboarding.">
+                <img src="../pics/about/peteSTi.jpg" class='img-square col-sm-4 img-fluid py-3 my-auto' alt="2005 Subaru WRX STi on the track.">
+                <img src="../pics/about/peteTheForce.png" class='img-square col-sm-4 img-fluid py-3 my-auto' alt="Annie is a sith lord!">
+            </div>
+            <div class="row">
+                <p class="col-sm-7">I have slid down <span>mountains</span> strapped to a waxy plank, and <span style="color:chocolate">driven</span> in circles as fast as I can.</p>
+                <p class="col-sm-4">I may have also married a <a href="https://en.wikipedia.org/wiki/Sith" target="_blank">Sith</a> Lord!<br><span style="color:darkorchid">'This is the way</span>.<span style="color:darkorchid">'</span></p>
+            </div>
         </div>
-        <div class="row">
-            <img src="../pics/about/peteSnowboardingMountain.jpg" class='img-square col-sm-4 img-fluid py-3 my-auto' alt="Picture of Pete snowboarding.">
-            <img src="../pics/about/peteSTi.jpg" class='img-square col-sm-4 img-fluid py-3 my-auto' alt="2005 Subaru WRX STi on the track.">
-            <img src="../pics/about/peteTheForce.png" class='img-square col-sm-4 img-fluid py-3 my-auto' alt="Annie is a sith lord!">
-        </div>
-        <div class="row">
-            <p class="col-sm-7">I have slid down <span>mountains</span> strapped to a waxy plank, and <span style="color:chocolate">driven</span> in circles as fast as I can.</p>
-            <p class="col-sm-4">I may have also married a <a href="https://en.wikipedia.org/wiki/Sith" target="_blank">Sith</a> Lord!<br><span style="color:darkorchid">'This is the way</span>.<span style="color:darkorchid">'</span></p>
-        </div>
-    </div>
+
+    </main>
 
     <footer id="footer" class="container-fluid"></footer>
 
