--- a/pages/projects.html
+++ b/pages/projects.html
@@ -214,10 +214,13 @@
 
     <!-- My JS -->
     <script src="../js/navbar.js"></script>
-    <script>injectMyNavbar();setActiveNavlink('navlinkProjects');</script>
     <script src="../js/cards.js"></script>
     <script src="../js/footer.js"></script>
-    <script>injectMyFooter()</script>
+    <script>
+        injectMyNavbar();
+        setActiveNavlink('navlinkProjects');
+        injectMyFooter();
+    </script>
 </body>
 
 </html>
