--- a/pages/resume.html
+++ b/pages/resume.html
@@ -285,9 +285,12 @@
 
     <!-- My JS -->
     <script src="../js/navbar.js"></script>
-    <script>injectMyNavbar();setActiveNavlink('navlinkResume');</script>
     <script src="../js/footer.js"></script>
-    <script>injectMyFooter()</script>
+    <script>
+        injectMyNavbar();
+        setActiveNavlink('navlinkResume');
+        injectMyFooter();
+    </script>
 </body>
 
 </html>
