--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -50,10 +50,9 @@
     </section>
 
     <main id="mainContent">
-        
         <!--
 
-            <section id="mySection">
+        <section id="mySection">
 
             <div class="row container-fluid">
                 <div class="text-center mb-4">
@@ -112,7 +111,8 @@
             </div>
 
         </section> 
-    -->
+
+        -->
     </main>
 
     <footer id="footer" class="container-fluid"></footer>
@@ -129,7 +129,7 @@
         injectMyNavbar();
         setActiveNavlink('navlinkWelcome');
         navbarCBPRemove();
-        setTimeout(myBackground, 2850);
+        setTimeout(injectWelcomeBackground, 2850);
         setTimeout(injectWelcome,3000);
         setTimeout(injectMyFooter,3000);
     </script>
