--- a/pages/about.html
+++ b/pages/about.html
@@ -93,9 +93,12 @@
 
     <!-- My JS -->
     <script src="../js/navbar.js"></script>
-    <script>injectMyNavbar();setActiveNavlink('navlinkAbout');</script>
     <script src="../js/footer.js"></script>
-    <script>injectMyFooter()</script>
+    <script>
+        injectMyNavbar();
+        setActiveNavlink('navlinkAbout');
+        injectMyFooter();
+    </script>
 </body>
 
 </html>
