--- a/pages/blog.html
+++ b/pages/blog.html
@@ -782,10 +782,13 @@
     
     <!-- My JS -->
     <script src="../js/navbar.js"></script>
-    <script>injectMyNavbar();setActiveNavlink('navlinkBlog');</script>
     <script src='../js/blog.js'></script>
     <script src="../js/footer.js"></script>
-    <script>injectMyFooter()</script>
+    <script>
+        injectMyNavbar();
+        setActiveNavlink('navlinkBlog');
+        injectMyFooter();
+    </script>
 </body>
 
 </html>
