--- a/pages/contact.html
+++ b/pages/contact.html
@@ -120,10 +120,13 @@
 
     <!-- My JS -->
     <script src="../js/navbar.js"></script>
-    <script>injectMyNavbar();setActiveNavlink('navlinkContact');</script>
     <script src="../js/cards.js"></script>
     <script src="../js/footer.js"></script>
-    <script>injectMyFooter()</script>
+    <script>
+        injectMyNavbar();
+        setActiveNavlink('navlinkContact');
+        injectMyFooter();
+    </script>
 </body>
 
 </html>
