--- a/pages/resume.html
+++ b/pages/resume.html
@@ -121,11 +121,10 @@
             </div>
             <p>LeNova, Inc. has over 30 years of experience as an engineering and technology solutions provider. They focus
                 on the Life Sciences and Commercial industries, but have a specialization in the Biopharmaceutical space. I
-                joined LeNova in 2022 to support business expansion initiatives, lead website development efforts, and build
-                upon to their core competencies.</p>
+                joined LeNova in 2022 to support business expansion initiatives, lead website development efforts, and build upon core competencies.</p>
             <p>My roles and responsibilities include:</p>
             <ul>
-                <li>Responsive website development using HTML, CSS, and JavaScript.</li>
+                <li>Responsive web development using HTML, CSS, and JavaScript.</li>
                 <li>Research business goals, customers and their expected behavior.</li>
                 <li>Propose and update website designs and layouts with key stakeholders.</li>
                 <li>Processing and editing of digital image and video content. </li>
