--- a/pages/blog.html
+++ b/pages/blog.html
@@ -58,7 +58,7 @@
                             src="../pics/about/mitxPro_logoStacked.jpg" class="img-fluid" alt="MIT xPro Logo."></a>
                 </div>
                 <div class="col-9 m-auto">
-                    <h3 class="text-center" style="color:gray;">These are reflections of my experience during the MIT xPro
+                    <h3 class="text-center textShadowBlack" style="color:gray;">These are reflections of my experience during the MIT xPro
                         Coding Bootcamp.</h3>
                 </div>
             </div>
