typewriter shuffle proj reorg

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -21,7 +21,7 @@
     <!-- My CSS -->
     <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/navbar.css">
-    <link rel="stylesheet" href="../css/typeWritercTL.css">
+    <link rel="stylesheet" href="../css/typewriter_sIL.css">
     <link rel="stylesheet" href="../css/cards.css">
     <link rel="stylesheet" href="../css/projects.css">
     <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
@@ -37,22 +37,19 @@
 
         <section id="typeWriterSection">
             <figure id='typeWriter' class="mx-auto">
-                <h2 id="typeWriter1"><span style='color:darkorchid;'>while</span> (<span
-                        style="color:cornflowerblue">alive</span>) {</h2>
-                <h2 id="typeWriter2"><span style='color:rgb(50,50,50);text-shadow:none;'>__</span><span
-                        style='color:chocolate'>code</span>()<span style='color:gray;'>;</span></h2>
-                <h2 id="typeWriter3"><span style='color:rgb(50,50,50);text-shadow:none;'>__</span><span
-                        style='color:chocolate'>track</span>(<span style='color:cornflowerblue;'>macros</span>)<span
-                        style='color:gray;'>;</span></h2>
-                <h2 id="typeWriter4"><span style='color:rgb(50,50,50);text-shadow:none;'>__</span><span
-                        style='color:chocolate'>lift</span>(<span style='color:cornflowerblue'>weights</span>)<span
-                        style='color:gray;'>;</span></h2>
-                <h2 id="typeWriter5">}</h2>
+                <h2 id="typeWriter1"><span style="color: cornflowerblue">stationInLife</span><span style='color:gray;'>.</span><span
+                        style="color:darkorchid;">replace</span>(</h2>
+                <h2 id="typeWriter2"><span style="color:rgb(50, 50, 50);text-shadow:none;">__</span>'<span
+                        style="color: #00857c;">Pharmaceutical
+                        Engineer</span>'<span style='color:gray;'>,</span></h2>
+                <h2 id="typeWriter3"><span style="color:rgb(50, 50, 50);text-shadow:none;">__</span>'<span
+                        style="color:lime;">Software
+                        Developer</span>')<span style='color:gray;'>;</span></h2>
             </figure>
         </section>
 
         <div class="container-fluid myArticles">
-            <h3>More projects are in development, please visit again.</h3>
+            <h3>MIT xPro Full Stack Bootcamp Projects</h3>
         </div>
 
         <div id='myProjects' class="row container-fluid justify-content-center">
@@ -111,13 +108,21 @@
                 </div>
             </div>
 
+        </div>
+
+        <div class="container-fluid myArticles">
+            <h3>Self-Taught Progression Projects</h3>
+        </div>
+        
+        <div id="myProjects2" class="row container-fluid justify-content-center">
+
             <div class="card col-sm-4" style="width: 18rem;">
                 <img src="../pics/mermaid_camera.gif" class="card-img-top pt-4 mx-auto" alt="Mermaid camera logo"
                     style="width:12rem;">
                 <div class="card-body">
                     <h5 class="card-title">Photographer Landingpage</h5>
-                    <p class="card-text"><a href="https://www.lmnophoto.biz" target="_blank">LMNOPhoto.biz</a> was my first
-                        freelance project and was completed using <a
+                    <p class="card-text"><a href="https://www.lmnophoto.biz" target="_blank">LMNOPhoto.biz</a> was my <span>first
+                        freelance project</span> and was completed using <a
                             href="https://getbootstrap.com/docs/5.1/getting-started/introduction/"
                             target="_blank">Bootstrap</a> and <a href="https://scrollmagic.io/"
                             target="_blank">ScrollMagic</a>.</p>
