--- a/pages/resume.html
+++ b/pages/resume.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="../css/resume.css">
+    <link rel="stylesheet" href="../css/typewriter_sIL.css">
     <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
 
     <title>codeByPete</title>
