--- a/pages/contact.html
+++ b/pages/contact.html
@@ -21,7 +21,7 @@
     <!-- My CSS -->
     <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/navbar.css">
-    <link rel="stylesheet" href="../css/typeWritercTL.css">
+    <link rel="stylesheet" href="../css/typewriter_cTL.css">
     <link rel="stylesheet" href="../css/contact.css">
     <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
 
