welcome footer proj add bus

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -50,9 +50,27 @@
 
         <div class="container-fluid myArticles">
             <h3>MIT xPro Full Stack Bootcamp Projects</h3>
+            <h6>More are in development, please visit again!</h6>
         </div>
 
         <div id='myProjects' class="row container-fluid justify-content-center">
+
+            <div class="card col-sm-4" style="width: 18rem;">
+                <img src="../pics/projects/busTracker.gif" class="card-img-top mx-auto pt-4" alt="Animated head image"
+                    style="height:10rem;">
+                <div class="card-body">
+                    <h5 class="card-title">Real-Time Bus Tracker</h5>
+                    <p class="card-text">This <a href="https://xpro.mit.edu/" target="_blank">MIT xPro</a> <span>
+                            Bootcamp Project</span> uses asynchronous JavaScript functions to fetch API data.</p>
+                    <p class="card-text">Custom styling and extra user interface functionality was added.</p>
+                        <div class="btnContainer">
+                            <a id='animatedHeadDemo' onclick="buttonEffect('animatedHeadDemo')" href="https://codetracklift.github.io/bustracker/" class="btn btn-secondary"
+                                target="_blank">Try Demo</a>
+                            <a id='animatedHeadRepo' onclick="buttonEffect('animatedHeadRepo')" href="https://github.com/codeTrackLift/bustracker" class="btn btn-secondary btnRepo "
+                                target="'_blank">View Repo</a>
+                        </div>
+                </div>
+            </div>
 
             <div class="card col-sm-4" style="width: 18rem;">
                 <img src="../pics/projects/animatedHead.gif" class="card-img-top mx-auto pt-4" alt="Animated head image"
@@ -62,7 +80,7 @@
                     <p class="card-text">This <a href="https://xpro.mit.edu/" target="_blank">MIT xPro</a> <span>
                             Bootcamp Project</span> demonstrates use of 'onmouse' and 'ontouch' event handlers.</p>
                     <p class="card-text"><span>Custom CSS</span> 'aesthetics' and 'typewriter' text was added, see <a
-                            href="../pages/blog.html#blog5Button">blog[5]</a>.
+                            href="../pages/blog.html#blog5Button">blog[5]</a>.</p>
                         <div class="btnContainer">
                             <a id='animatedHeadDemo' onclick="buttonEffect('animatedHeadDemo')" href="https://codetracklift.github.io/eyemovement/" class="btn btn-secondary"
                                 target="_blank">Try Demo</a>
@@ -80,7 +98,7 @@
                     <p class="card-text">This <a href="https://xpro.mit.edu/" target="_blank">MIT xPro</a> <span>
                             Bootcamp Project</span> demonstrates use of array methods and DOM manipulation.</p>
                     <p class="card-text"><span>Custom features</span> include an 'Aqua' theme and <em>ZAP!</em> PacMan
-                        button, see <a href="../pages/blog.html#blog5Button">blog[5]</a>.
+                        button, see <a href="../pages/blog.html#blog5Button">blog[5]</a>.</p>
                         <div class="btnContainer">
                             <a id='pacManFactoryDemo' onclick="buttonEffect('pacManFactoryDemo')" href="https://codetracklift.github.io/pacmen_factory/" class="btn btn-secondary"
                                 target="_blank">Try Demo</a>
