--- a/pages/projects.html
+++ b/pages/projects.html
@@ -154,7 +154,7 @@
             </div>
 
             <div class="card col-sm-4" style="width:18rem;">
-                <img src="../pics/odin-calc.ico" class="card-img-top px-4 pt-2" alt="Calculator image">
+                <img src="../pics/odin-calc.ico" class="card-img-top px-5 pt-2" alt="Calculator image" style="height:10rem;">
                 <div class="card-body">
                     <h5 class="card-title">JavaScript Calculator</h5>
                     <p class="card-text">My <span>third JavaScript Project</span>, this was also completed as part of <a
