--- a/pages/projects.html
+++ b/pages/projects.html
@@ -50,7 +50,7 @@
 
         <div class="container-fluid myArticles">
             <h3>MIT xPro Full Stack Bootcamp Projects</h3>
-            <h6>More are in development, please visit again!</h6>
+            <h6>There is more in development, please visit again!</h6>
         </div>
 
         <div id='myProjects' class="row container-fluid justify-content-center">
